<resources>
    <string name="app_name">MostBeauty</string>
    <string name="text_huabao_button">画报</string>
    <string name="text_my_button">我</string>
    <string name="text_sheji_button">设计师</string>
    <string name="text_youwu">有物</string>
    <string name="text_material">编辑资料</string>
    <string name="material_head">更改头像</string>
    <string name="material_nickname">昵称</string>
    <string name="text_sex">性别</string>
    <string name="text_view_birthday">生日</string>
    <string name="binding_mailbox">绑定邮箱</string>
    <string name="mailbox">邮箱</string>
    <string name="choose_sex">选择性别</string>
    <string name="boy">男</string>
    <string name="gril">女</string>
    <string name="privary">保密</string>
    <string name="text_share">分享这篇文章</string>
    <string name="text_name">申请成为作者</string>
    <string name="tv_content">这里就是你的发布台.</string>
    <string name="tv_content_two">希望分享给大家,找到品味相投的伙伴?</string>
    <string name="tv_content_one">有你自已喜欢的独特品牌</string>
    <string name="tv_title_one">成为最美作者</string>
    <string name="tv_name_tt">作者</string>

    <string name="btn">查看所有商品</string>
    <string name="tv_commmeny">查看全部评论</string>
    <string name="et_say">说点什么吧</string>

    <string name="phone_edit">绑定手机号</string>
    <string name="verification">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="sure">确定</string>
    <string name="phone_text">绑定手机号</string>
    <string name="phone">绑定手机号</string>
    <string name="no_logon">未登录</string>
    <string name="feedback">反馈</string>
    <string name="collect_draw">收藏的画报</string>
    <string name="attention">关注的设计师</string>
    <string name="my_wish">我的心愿单</string>
    <string name="beautiful">最美团队的另一个产品:最美应用</string>
    <string name="set">设置</string>
    <string name="personage">个人信息</string>
    <string name="clean">清除缓存</string>
    <string name="good_reputation">好评</string>
    <string name="recommend">推荐给朋友</string>
    <string name="about_our">关于我们</string>
    <string name="exit">退出</string>
    <string name="user_feedback">用户反馈</string>
    <string name="contact">填写联系方式</string>
    <string name="send">发送</string>
    <string name="write_advice">写下您的建议和反馈</string>


    <string name="choose_birthday">选择生日</string>
    <string name="girl">女</string>
    <string name="choose_sexs">选择性别</string>
    <string name="empty">这里空空的什么都还没有呢...</string>

    <string name="person_contact">填写联系方式</string>
    <string name="person_write">请填写QQ,手机号或者邮箱等任何可以联系到您的方式.</string>
    <string name="tv_comment_tt">评论</string>
    <string name="tv_send">发送</string>
    <string name="about_me">关于我们</string>
    <string name="_0">0</string>
    <string name="_10">/10</string>
    <string name="haved_comment">已评选</string>
    <string name="_1">1</string>
    <string name="data">日期</string>
    <string name="name">name</string>
    <string name="designername">designerName</string>
    <string name="label">label</string>
    <string name="whole">全部</string>
    <string name="design">设计师</string>
    <string name="say_sth">说点什么吧</string>
    <string name="net">品牌官网</string>
    <string name="end">END</string>
    <string name="please_logn">注册</string>
    <string name="phone_number">输入手机号</string>
    <string name="password">密码</string>
    <string name="sina">新浪微博</string>
    <string name="qq">QQ</string>
    <string name="weixin">微信</string>
    <string name="tv_anthor">作者</string>
    <string name="tv_care">+ 关注</string>
    <string name="paint">相关画报</string>
    <string name="tv_care_ss">+ 关注</string>
    <string name="user">用户协议</string>
    <string name="promptly">立即体验</string>
    <string name="tv_weixin">微信</string>
    <string name="and">设计师 and 作品</string>


</resources>
