<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="@dimen/three_hundred"
              android:background="#1f1f1f">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/ahthhf_ll_mt">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/adapter_have_things_have_tc"
            android:textSize="@dimen/thirty_sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_10"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/adapter_have_things_have_tvc"
            android:paddingTop="@dimen/fifteen_dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/haved_comment"
        android:textSize="@dimen/fifteen_sp_tv"
        android:textColor="@color/adapter_have_things_have_tec"
        android:paddingTop="@dimen/five_dp"
        android:gravity="center"/>
    <GridView
        android:id="@+id/adapter_have_things_have_foot_cv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_handroid_forteen"
        android:numColumns="5"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twenty_dp"/>
</LinearLayout>