<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical">

    <include
        android:id="@+id/include_feedback"
        layout="@layout/include_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/six"
        android:text="@string/user_feedback"
        android:textColor="@color/color_material"
        android:textSize="@dimen/twenty" />

    <RelativeLayout
        android:id="@+id/relative_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_feedback"
        android:padding="@dimen/ten">

        <TextView
            android:id="@+id/text_view_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fifteen"
            android:layout_marginTop="@dimen/thirty"
            android:text="@string/contact"
            android:textColor="@color/color_huabao_title"
            android:textSize="@dimen/twenty_five" />

        <ImageView
            android:id="@+id/image_contact"
            android:layout_width="@dimen/ten"
            android:layout_height="@dimen/fifteen"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/thirty"
            android:background="@mipmap/ic_common_arrow_normal" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_contact"
            android:layout_marginTop="@dimen/twenty"
            android:background="@mipmap/line" />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/ten"
        android:hint="@string/write_advice" />

    <TextView
        android:id="@+id/text_send_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/fifteen"
        android:layout_marginRight="@dimen/five"
        android:text="@string/send"
        android:textColor="@color/color_huabao_title"
        android:textSize="@dimen/twenty_five" />
</RelativeLayout>