<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <include
        android:id="@+id/include_material"
        layout="@layout/include_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/six"
        android:text="@string/text_material"
        android:textColor="@color/color_material"
        android:textSize="@dimen/twenty" />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_material">

        <TextView
            android:id="@+id/text_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginTop="@dimen/twenty_five"
            android:text="@string/material_head"
            android:textColor="@color/color"
            android:textSize="@dimen/eighteen" />

        <com.lanou3g.mostbeauty.myview.circleImageView
            android:id="@+id/image_head"
            android:layout_width="@dimen/forty"
            android:layout_height="@dimen/forty"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginTop="@dimen/fifteen"
            android:src="@mipmap/best_beauty" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_head"
            android:layout_marginTop="@dimen/fifteen"
            android:background="@mipmap/line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout">

        <TextView
            android:id="@+id/text_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginTop="@dimen/twenty_five"
            android:text="@string/material_nickname"
            android:textColor="@color/color"
            android:textSize="@dimen/eighteen" />

        <EditText
            android:id="@+id/text_view_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/twenty"
            android:layout_marginTop="@dimen/twenty"
            android:background="@null"
            android:hint="@string/material_nickname"
            android:textColor="@color/color_text_color" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_nickname"
            android:layout_marginTop="@dimen/fifteen"
            android:background="@mipmap/line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout_nickname">

        <TextView
            android:id="@+id/text_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginTop="@dimen/twenty_five"
            android:text="@string/text_sex"
            android:textColor="@color/color"
            android:textSize="@dimen/eighteen" />

        <TextView
            android:id="@+id/text_view_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/twenty"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/choose_sexs"
            android:textColor="@color/color_text_color"
            android:textSize="@dimen/eighteen" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_sex"
            android:layout_marginTop="@dimen/fifteen"
            android:background="@mipmap/line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout_sex">

        <TextView
            android:id="@+id/text_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginTop="@dimen/twenty_five"
            android:text="@string/text_view_birthday"
            android:textColor="@color/color"
            android:textSize="@dimen/eighteen" />

        <TextView
            android:id="@+id/text_view_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/twenty"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/choose_birthday"
            android:textColor="@color/color_text_color"
            android:textSize="@dimen/eighteen" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_birthday"
            android:layout_marginTop="@dimen/fifteen"
            android:background="@mipmap/line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_mailbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout_birthday">

        <TextView
            android:id="@+id/text_mailbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginTop="@dimen/twenty_five"
            android:text="@string/mailbox"
            android:textColor="@color/color"
            android:textSize="@dimen/eighteen" />

        <EditText
            android:id="@+id/edit_text_mailbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/twenty"
            android:layout_marginTop="@dimen/twenty"
            android:background="@null"
            android:hint="@string/binding_mailbox"
            android:textColor="@color/color_text_color" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_mailbox"
            android:layout_marginTop="@dimen/fifteen"
            android:background="@mipmap/line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_binding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout_mailbox">

        <TextView
            android:id="@+id/text_binbing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginTop="@dimen/twenty_five"
            android:text="绑定手机号"
            android:textColor="@color/color"
            android:textSize="@dimen/eighteen" />

        <TextView
            android:id="@+id/text_view_binbing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/twenty"
            android:layout_marginTop="@dimen/twenty"
            android:background="@null"
            android:text="绑定手机号"
            android:textColor="@color/color_text_color"
            android:textSize="@dimen/eighteen" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_binbing"
            android:layout_marginTop="@dimen/fifteen"
            android:background="@mipmap/line" />
    </RelativeLayout>
</RelativeLayout>
